--- a/Dockerfile-ubuntu
+++ b/Dockerfile-ubuntu
@@ -4,7 +4,19 @@ MAINTAINER Mezuro Team <mezurometrics@gmail.com>
 RUN apt-get update
 
 RUN apt-get -y upgrade
-RUN apt-get install -y build-essential ruby1.9.1-full rubygems1.9.1 git curl libmysqlclient-dev libpq-dev libevent-dev libssl-dev libxml2-dev libxslt1-dev libreadline-dev
+RUN apt-get install -y build-essential \
+  ruby1.9.1-full \
+  rubygems1.9.1 \
+  git \
+  curl \
+  libmysqlclient-dev \
+  libpq-dev \
+  libevent-dev \
+  libssl-dev \
+  libxml2-dev \
+  libxslt1-dev \
+  libreadline-dev \
+  libsqlite3-dev
 RUN gem install pkgr bundler --no-ri --no-rdoc
 
 ADD src /root/mezuro/src
