--- a/Dockerfile-ubuntu
+++ b/Dockerfile-ubuntu
@@ -7,8 +7,8 @@ RUN apt-get -y upgrade
 RUN apt-get install -y \
   build-essential \
   ruby \
+  ruby-dev \
   rubygems-integration \
-  bundler \
   git \
   curl \
   libpq-dev \
@@ -18,9 +18,8 @@ RUN apt-get install -y \
   libxslt1-dev \
   libreadline-dev \
   libsqlite3-dev
-RUN gem install fpm-cookery
+RUN gem install fpm-cookery --no-ri --no-rdoc
 
-ADD src /root/mezuro/src
 ADD scripts /root/mezuro/scripts
 
 CMD ["/root/mezuro/scripts/kalibro_configurations/run.sh"]
