Add partial database configuration
Try to configure the database using postgresql.

--- a/Dockerfile-ubuntu
+++ b/Dockerfile-ubuntu
@@ -5,8 +5,10 @@ RUN apt-get update
 
 RUN apt-get -y upgrade
 RUN apt-get install -y \
+  postgresql \
   build-essential \
   ruby \
+  bundler \
   ruby-dev \
   rubygems-integration \
   git \
