--- a/Dockerfile-debian
+++ b/Dockerfile-debian
@@ -19,8 +19,10 @@ RUN apt-get install -y \
   libxml2-dev \
   libxslt1-dev \
   libreadline-dev \
-  libsqlite3-dev
+  libsqlite3-dev \
+  postgresql-server-dev-9.4
 RUN gem install fpm-cookery --no-ri --no-rdoc
+RUN gem install bundler thor --no-ri --no-rdoc
 
 ADD scripts /root/mezuro/scripts
 
