--- a/Dockerfile-debian
+++ b/Dockerfile-debian
@@ -20,7 +20,9 @@ RUN apt-get install -y \
   libxslt1-dev \
   libreadline-dev \
   libsqlite3-dev \
-  postgresql-server-dev-9.4
+  postgresql-server-dev-9.4 \
+  librpmbuild3 \
+  rpm
 RUN gem install fpm-cookery --no-ri --no-rdoc
 RUN gem install bundler thor --no-ri --no-rdoc
 
