Create prezento rake task
  * Also removes the command to build on a single docker instance all
    the packages due to gem conflicts. Now, it the :all task runs all
    other tasks sequentially.
  * Remove run_all script because now the run.sh script of each project
    will be executed.
  * Changed CMD command on debian and centos dockerfiles to
    automatically run the bash. Now we don't need to execute any script
    because each task on Rakefile will be responsible for it.

Signed-off-by: Rafael Reggiani Manzo <rr.manzo@gmail.com>

--- a/Dockerfile-debian
+++ b/Dockerfile-debian
@@ -28,4 +28,4 @@ RUN gem install bundler thor --no-ri --no-rdoc
 
 ADD scripts /root/mezuro/scripts
 
-CMD ["/root/mezuro/scripts/run_all.sh"]
+CMD ["/bin/bash"]
