Fix MezuroInformations retrieval for recipes
The mezuro_informations.rb was not accessible inside containers and
there was missing requires.

Signed off by: Eduardo Araújo <duduktamg@hotmail.com>

--- a/Dockerfile-centos
+++ b/Dockerfile-centos
@@ -34,5 +34,6 @@ RUN gem install fpm-cookery --no-ri --no-rdoc
 RUN gem install bundler thor --no-ri --no-rdoc
 
 ADD scripts /root/mezuro/scripts
+ADD mezuro_informations.rb /root/mezuro/mezuro_informations.rb
 
 CMD ["/bin/bash"]
