--- a/fullstack/Vagrantfile
+++ b/fullstack/Vagrantfile
@@ -82,6 +82,22 @@ Vagrant.configure(2) do |config|
     # Mezuro setup
     yum -y install /root/mezuro/pkgs/kalibro-configurations/kalibro-configurations-#{MezuroInformations::KALIBRO_CONFIGURATIONS[:info][:version]}-#{MezuroInformations::KALIBRO_CONFIGURATIONS[:info][:release]}.noarch.rpm
     yum -y install /root/mezuro/pkgs/kalibro-processor/kalibro-processor-#{MezuroInformations::KALIBRO_PROCESSOR[:info][:version]}-#{MezuroInformations::KALIBRO_PROCESSOR[:info][:release]}.noarch.rpm
-    yum -y install /root/mezuro/pkgs/prezento/prezento-#{MezuroInformations::KALIBRO_CONFIGURATIONS[:info][:version]}-#{MezuroInformations::KALIBRO_CONFIGURATIONS[:info][:release]}.noarch.rpm
+    yum -y install /root/mezuro/pkgs/prezento/prezento-#{MezuroInformations::PREZENTO[:info][:version]}-#{MezuroInformations::PREZENTO[:info][:release]}.noarch.rpm
+
+    # NGINX proxy setup
+    yum -y install /root/mezuro/pkgs/prezento-nginx/prezento-nginx-#{MezuroInformations::PREZENTO_NGINX[:info][:version]}-#{MezuroInformations::PREZENTO_NGINX[:info][:release]}.noarch.rpm
+    yum -y install policycoreutils-python # open ports on SELinux
+    setsebool httpd_can_network_connect 1 -P
+    (! semanage port -l | grep "^\(http_port_t\)\(.\)\+\(\s8085,\)") && semanage port -a -t http_port_t -p tcp 8085
+
+    # Start services
+    systemctl enable kalibro-configurations.target
+    systemctl enable kalibro-processor.target
+    systemctl enable prezento.target
+    systemctl enable nginx
+    systemctl start kalibro-configurations.target
+    systemctl start kalibro-processor.target
+    systemctl start prezento.target
+    systemctl start nginx
   SHELL
 end
