Fix NGINX proxy location to point at /mezuro
This is the default relative url root while using prezento-spb.

--- a/scripts/prezento-nginx/prezento.conf
+++ b/scripts/prezento-nginx/prezento.conf
@@ -13,7 +13,7 @@ server {
 
   #root  /usr/share/mezuro/prezento/public/;
 
-  location / {
+  location /mezuro/ {
     alias /usr/share/mezuro/prezento/public/;
     try_files $uri @mezuro-app;
   }
